# qalitydeep

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  qalitydeep.yaml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml  publish.yml
data/: auth.json  upload_me_support_qa.csv
data/sample/: DATASET_CSV_GUIDE.md  support_rag_sample.csv  support_with_tools_sample.csv
evals/: eval_sample.py
playground-app/: README.md  index.html  package-lock.json  package.json
playground-app/src/: App.css  App.jsx
playground-app/src/components/: Nav.jsx  RequestBuilder.jsx  RequestSection.jsx  ResponseSection.jsx
playground-next/: README.md  package-lock.json  package.json  pw-resize-check-run.js  pw-resize-check.spec.js  tailwind.config.ts
playground-next/app/: globals.css  layout.tsx  page.tsx
playground-next/app/create-api-key/: page.tsx
playground-next/components/: api-editor.tsx  code-block-panel.tsx  endpoint-bar.tsx  eval-response-view.tsx  navbar.tsx  sidebar.tsx
playground-next/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  tabs.tsx
qalitydeep/: __init__.py  ab_testing.py  api_server.py  auth.py  cli.py  comparison.py  config.py  cost_tracker.py  decorators.py  discovery.py  doctor.py  eval_config.py  evals.py  exports.py  langgraph_flows.py  langsmith_integration.py  llm_backends.py  mcp_server.py  models.py  plugins.py  remote_eval.py  sandbox.py  scaffolding.py  storage.py  tools.py  watcher.py  yaml_loader.py
qalitydeep/formatters/: __init__.py  json_fmt.py  junit.py  table.py
qalitydeep/metrics/: __init__.py  agent.py  base.py  code_diff.py  code_execution.py  code_syntax.py  composite.py  conversation.py  programmatic.py
qalitydeep/reports/: __init__.py  html_report.py
qalitydeep/templates/: __init__.py  qalitydeep.yaml
qalitydeep/templates/datasets/: code_review.json  support_qa.json  tool_usage.json
